tests/fixtures/invalid/none_bitor_int.py
# Cannot bitwise OR None and Int
x: None = None | 1
